Estructura e inicio del proyecto

--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,17 @@
 !DOCTYPE html
-<html>
-    <p>
-        Prueba de push :3
-    </p>
+<html lang="es">
+   <head>
+       <meta charset="iso-8859-1">
+       <meta name="Proyecto final" content="Proyecto">
+       <meta name="keywords" content="HTML5,CSS3">
+       <title>Sistema BUAP</title>
+       <link rel="stylesheet" href="estilo.css">
+    </head>
+    <body>
+        <div id="bigbox">
+            <header id="header">
+
+            </header>
+        </div>
+    </body>
 </html>
