--- a/Index.html
+++ b/Index.html
@@ -1,18 +1,34 @@
-!DOCTYPE html
+<!DOCTYPE html>
 <html lang="es">
    <head>
        <meta charset="iso-8859-1">
        <meta name="Proyecto final" content="Proyecto">
        <meta name="keywords" content="HTML5,CSS3">
        <title>Sistema BUAP</title>
-       <link rel="stylesheet" href="estilo.css">
+       <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="bigbox">
-            <header id="header">
-
+        <center>
+        <div class="bigbox">
+            <header class="header">
+               <h2>Bienvenido al sistema escolar</h2>
             </header>
+            <section class="img">
+                <center>
+                 <img src="https://static.iris.net.co/dinero/upload/images/2019/1/23/266310_1.jpg" width="700" height="150"/>
+                </center>
+            </section>
         </div>
+        <div>
+            <aside>
+                <fieldset>
+                    <p>aside</p>
+                </fieldset>
+            </aside>
+        </div>
+        </center>
     </body>
+    <footer class="foot">
+        <p> Materia: Alumno: Ciclo:</p>
+    </footer>
 </html>
-<p> prueba push</p>
