--- a/registro_alumno.html
+++ b/registro_alumno.html
@@ -36,8 +36,8 @@
             </form>
             <footer>
                 <center>
-                    <p><a href='login_docente.html'>Soy docente</a>
-                    <a href='login_docente.html'>Inicio</a></p>
+                    <p><a href='registro_docente.html'>Soy docente</a>
+                    <a href='login.html'>Inicio</a></p>
                 </center>
             </footer>
     </body>
