--- a/registro_docente.html
+++ b/registro_docente.html
@@ -33,6 +33,6 @@
         </form>
     </body>
     <footer>
-        <p><a href=''>Inicio</a></p>
+        <p><a href='login.html'>Inicio</a></p>
     </footer>
 </html>
