--- a/registro_alumno.html
+++ b/registro_alumno.html
@@ -9,7 +9,11 @@
     </head>
     <body class="body">
             <form action="registrar_alumno.php" method="POST"  enctype="multipart/form-data">
-                <h1>registro de alumno</h1>
+                <div>
+                    <header>
+                        <h1>registro de alumno</h1>
+                    </header>
+                </div>
                 <div>
 
                     <label for="id">Matricula</label><br>
