--- a/login.html
+++ b/login.html
@@ -11,8 +11,8 @@
         <h1>Ingresar</h1>
         <form action="login.php" method="POST">
             <div>
-                <label for="usuario">Usuario:</label>
-                <input type="text" name="usuario" id="usuario" placeholder="Nombre de ususario" required>
+                <label for="id">Usuario:</label>
+                <input type="number" name="id" id="id" placeholder="Matricula 9 digitos" required>
 
                 <label for="password">Contraseña:</label>
                 <input type="password" name="password" id="password" required>
